--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "music10-server",
-  "version": "0.0.1",
-  "description": "",
+  "name": "@music10/server",
+  "version": "1.0.0",
+  "description": "Nest.js Musiq server",
   "author": "Dmitry Dergunov <dmitry@dergunov.net>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -13,7 +13,6 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:forever": "forever -c 'node' dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -32,8 +31,7 @@
     "@nestjs/websockets": "^7.6.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "forever": "^3.0.4"
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
