--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -54,7 +54,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME --build-arg SPOTIFY_AUTH_TOKEN=${{ secrets.SPOTIFY_AUTH_TOKEN }}
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
