--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -37,10 +37,12 @@ jobs:
 
       - name: Unit Test
         run: npm run test
-
+        env:
+          SPOTIFY_AUTH_TOKEN: ${{ secrets.SPOTIFY_AUTH_TOKEN }}
       - name: e2e Test
         run: npm run test:e2e
-
+        env:
+          SPOTIFY_AUTH_TOKEN: ${{ secrets.SPOTIFY_AUTH_TOKEN }}
     # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
   push:
