--- a/api.yaml
+++ b/api.yaml
@@ -1,4 +1,4 @@
-swagger: "2.0"
+swagger: '2.0'
 info:
   title: Music10 API
   description: API for Music10 server.
@@ -14,18 +14,18 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: "query"
-          in: "query"
-          description: "Query string for search playlists by name"
+        - name: 'query'
+          in: 'query'
+          description: 'Query string for search playlists by name'
           required: false
-          type: "string"
+          type: 'string'
       responses:
         200:
           description: OK
           schema:
-            type: "array"
+            type: 'array'
             items:
-              $ref: "#/definitions/Playlist"
+              $ref: '#/definitions/Playlist'
 
             example:
               - id: 1
@@ -34,25 +34,25 @@ paths:
                 name: Дискотека 80х
   /playlists/{id}:
     get:
-      summary: "Get playlist by ID"
-      description: "Returns a single playlist"
+      summary: 'Get playlist by ID'
+      description: 'Returns a single playlist'
       produces:
         - application/json
       parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of playlist to return"
+        - name: 'id'
+          in: 'path'
+          description: 'ID of playlist to return'
           required: true
-          type: "integer"
-          format: "int64"
+          type: 'integer'
+          format: 'int64'
       responses:
         200:
           description: OK
           schema:
-            $ref: "#/definitions/Playlist"
+            $ref: '#/definitions/Playlist'
 definitions:
   Playlist:
-    type: "object"
+    type: 'object'
     properties:
       id:
         type: integer
