--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@music10/server",
-  "version": "1.0.0",
+  "version": "1.2.3",
   "description": "Nest.js Musiq server",
   "author": "Dmitry Dergunov <dmitry@dergunov.net>",
   "private": true,
@@ -31,7 +31,8 @@
     "@nestjs/websockets": "^7.6.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "svg2img": "^0.9.0"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
