--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules",
-    "__tests__", "dist", "**/*spec.ts"]
+  "exclude": ["node_modules", "__tests__", "dist", "**/*spec.ts"]
 }
