--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@nestjs/platform-express": "^7.6.4",
     "@nestjs/platform-socket.io": "^7.6.4",
     "@nestjs/websockets": "^7.6.4",
+    "canvas": "^2.6.1",
+    "fabric": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "svg2img": "^0.9.0"
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
@@ -48,6 +49,7 @@
     "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
