--- a/package.json
+++ b/package.json
@@ -24,42 +24,44 @@
     "deploy:coverage": "scp -r coverage/lcov-report/* dergunov@dplnk.ru:~/music/web/build/dev/coverage/server"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.4",
-    "@nestjs/core": "^7.6.4",
-    "@nestjs/platform-express": "^7.6.4",
-    "@nestjs/platform-socket.io": "^7.6.4",
-    "@nestjs/websockets": "^7.6.4",
+    "@nestjs/common": "^7.6.13",
+    "@nestjs/core": "^7.6.13",
+    "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/platform-socket.io": "^7.6.13",
+    "@nestjs/swagger": "^4.7.15",
+    "@nestjs/websockets": "^7.6.13",
     "canvas": "^2.6.1",
-    "fabric": "^4.3.0",
+    "fabric": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.6",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.2.5",
-    "@nestjs/testing": "^7.6.4",
-    "@types/express": "^4.17.9",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.16",
-    "@types/socket.io": "^2.1.12",
+    "@nestjs/cli": "^7.5.6",
+    "@nestjs/schematics": "^7.2.8",
+    "@nestjs/testing": "^7.6.13",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
+    "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "supertest": "^6.0.1",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.12",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.2",
+    "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.2"
   },
   "jest": {
     "moduleFileExtensions": [
