--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@music10/server",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Nest.js Musiq server",
   "author": "Dmitry Dergunov <dmitry@dergunov.net>",
   "private": true,
@@ -24,44 +24,44 @@
     "deploy:coverage": "scp -r coverage/lcov-report/* dergunov@dplnk.ru:~/music/web/build/dev/coverage/server"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.13",
-    "@nestjs/core": "^7.6.13",
-    "@nestjs/platform-express": "^7.6.13",
-    "@nestjs/platform-socket.io": "^7.6.13",
-    "@nestjs/swagger": "^4.7.15",
-    "@nestjs/websockets": "^7.6.13",
-    "canvas": "^2.6.1",
-    "fabric": "^4.3.1",
+    "@nestjs/common": "^8.0.1",
+    "@nestjs/core": "^8.0.1",
+    "@nestjs/platform-express": "^8.0.1",
+    "@nestjs/platform-socket.io": "^8.0.1",
+    "@nestjs/swagger": "^5.0.0",
+    "@nestjs/axios": "^0.0.1",
+    "@nestjs/websockets": "^8.0.1",
+    "canvas": "^2.8.0",
+    "fabric": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "^1.1.11",
-    "@nestjs/cli": "^7.5.6",
-    "@nestjs/schematics": "^7.2.8",
-    "@nestjs/testing": "^7.6.13",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "@types/socket.io": "^2.1.13",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
+    "@compodoc/compodoc": "^1.1.13",
+    "@nestjs/cli": "^8.0.2",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.1",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.1",
+    "@types/socket.io": "^3.0.2",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.2",
-    "ts-loader": "^8.0.17",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.2"
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.1.0",
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
