--- a/ws.api.yaml
+++ b/ws.api.yaml
@@ -1,9 +1,9 @@
 asyncapi: 2.0.0
 
 info:
-  title: Music10 API
-  version: 1.0.0
-  description: WebSocket Music10 API
+  title: Musiq API
+  version: 1.3.1
+  description: WebSocket Musiq API
   contact:
     name: Dmitry Dergunov
     url: https://dergunov.net
@@ -54,11 +54,11 @@ components:
     setPlaylistRequest:
       payload:
         type: integer
-        description: Playlist id for game
+        description: PlaylistDto id for game
 
     playlistResponse:
       payload:
-        $ref: '#/components/schemas/Playlist'
+        $ref: '#/components/schemas/PlaylistDto'
 
     nextTracksResponse:
       payload:
@@ -67,7 +67,7 @@ components:
     chooseRequest:
       payload:
         type: integer
-        description: Playlist id of user choose
+        description: PlaylistDto id of user choose
 
     chooseResultResponse:
       payload:
@@ -94,7 +94,7 @@ components:
         tracks:
           type: 'array'
           items:
-            $ref: '#/components/schemas/Track'
+            $ref: '#/components/schemas/TrackDto'
           minItems: 4
           maxItems: 4
           description: Array with displayed files
@@ -117,7 +117,7 @@ components:
       properties:
         correct:
           type: integer
-          description: Right Track ID
+          description: Right TrackDto ID
         result:
           $ref: '#/components/schemas/Result'
 
