--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -5,6 +5,7 @@ on:
     # Publish `master` as Docker `latest` image.
     branches:
       - master
+      - develop
 
     # Publish `v1.2.3` tags as releases.
     tags:
@@ -37,13 +38,9 @@ jobs:
 
       - name: Unit Test
         run: npm run test
-        env:
-          SPOTIFY_AUTH_TOKEN: ${{ secrets.SPOTIFY_AUTH_TOKEN }}
 
       - name: e2e Test
         run: npm run test:e2e
-        env:
-          SPOTIFY_AUTH_TOKEN: ${{ secrets.SPOTIFY_AUTH_TOKEN }}
 
       - name: Build Test
         run: docker build . --file Dockerfile
@@ -60,7 +57,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME --build-arg SPOTIFY_AUTH_TOKEN=${{ secrets.SPOTIFY_AUTH_TOKEN }}
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
