--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config __tests__/jest-e2e.json --detectOpenHandles --forceExit",
     "doc": "compodoc -p tsconfig.json -s",
-    "deploy:doc": "scp -r documentation/* musiq@msq.app:~/web/dev/doc/server",
-    "deploy:coverage": "scp -r coverage/lcov-report/* musiq@msq.app:~/web/dev/coverage/server"
+    "deploy:doc": "scp -r documentation/* musiq@musiq.dergunov.net:~/web/dev/doc/server",
+    "deploy:coverage": "scp -r coverage/lcov-report/* musiq@musiq.dergunov.net:~/web/dev/coverage/server"
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
