--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-ui-express": "^4.5.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.19",
@@ -45,6 +46,7 @@
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.14",
     "@types/supertest": "^2.0.12",
+    "@types/xml2js": "^0.4.11",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "^8.23.0",
